hphp/hack/test/typecheck/namespace_namespace2.php.exp
File "namespace_namespace2.php", line 6, characters 5-15:
  int
File "namespace_namespace2.php", line 7, characters 12-13:
Invalid return type (Typing[4110])
File "namespace_namespace2.php", line 4, characters 17-22:
Expected string
File "namespace_namespace2.php", line 12, characters 17-19:
But got int
